--- a/i3/config
+++ b/i3/config
@@ -187,6 +187,8 @@ default_floating_border normal
 
 # Polybar
 # exec_always --no-startup-id xrandr --output HDMI-2 --same-as eDP-1
+exec --no-startup-id /usr/lib/mate-polkit/polkit-mate-authentication-agent-1
+
 exec --no-startup-id polybar
 
 # xborder
