--- a/i3/config
+++ b/i3/config
@@ -209,9 +209,6 @@ bindsym Ctrl+Shift+Print --release exec --no-startup-id ~/.config/scripts/select
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 
-# no mouse follow
-focus_follows_mouse no
-
 # Background
 exec --no-startup-id feh --bg-fill ~/.config/wallpaper.png --image-bg "#21222c"
 
@@ -225,7 +222,7 @@ bindsym $mod+Ctrl+n exec dunstctl close
 bindsym $mod+Ctrl+p exec dunstctl history-pop
 
 # Lockscreen
-bindsym $mod+Shift+z exec --no-startup-id ~/.config/scripts/lock_screen.sh
+bindsym $mod+Shift+z exec i3lock -i ~/.config/lockscreen.png
 
 # Gaps
 #smart_gaps on
