--- a/i3/config
+++ b/i3/config
@@ -48,7 +48,7 @@ bindsym $mod+period exec --no-startup-id rofi -modi emoji -show emoji -emoji-for
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -show run
+bindsym $mod+d exec --no-startup-id rofi -show drun
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
