switch to catppuccin

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -3,15 +3,15 @@
 ;-------------------------------------------------------------------------------
 
 [colors]
-dark = #2d353b 
-mid = #3d484d
+dark = #181825 
+mid = #313244
 
-border = #7a8478
-light = #7a8478
+border = #6c7086
+light = #6c7086
 
-highlight = #d3c6aa
-urgent = #e67e80
-urgent_dark = #962e30
+highlight = #f9e2af
+urgent = #f38ba8
+urgent_dark = #a6e3a1
 
 ;-------------------------------------------------------------------------------
 ;	B A R S
