--- a/i3/config
+++ b/i3/config
@@ -17,8 +17,8 @@ set $w9 9
 set $w10 10
 
 # Colors
-set $active #7a8478
-set $inactive #2d353b
+set $active #181825
+set $inactive #6c7086
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -208,7 +208,7 @@ bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 
 # Background
-exec --no-startup-id feh --bg-fill ~/.config/wallpaper.png --image-bg "#21222c"
+exec --no-startup-id feh --bg-fill ~/.config/wallpaper.jpg --image-bg "#21222c"
 
 # Picom
 exec --no-startup-id picom -f
