--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -9,7 +9,7 @@ mid = #313244
 border = #6c7086
 light = #6c7086
 
-highlight = #f9e2af
+highlight = #cdd6f4
 urgent = #f38ba8
 urgent_dark = #a6e3a1
 
