--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -34,10 +34,8 @@ shadow-exclude = [
   # "window_type = 'utility'",
 ];
 
-opacity-rule = [
-  "100:class_g = 'Terminator' && !_NET_WM_STATE@:32a",
-  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
-];
+active-opacity = 0.9
+inactive-opacity = 0.6
 
 # Need
 backend = "glx";
@@ -45,7 +43,7 @@ glx-no-stencil = true;
 use-damage = true;
 vsync = true;
 
-blur-background = false;
+blur-background = true;
 blur-method = "dual_kawase";
 blur-strength = 2;
 blur-background-exclude = [
