--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -34,8 +34,8 @@ shadow-exclude = [
   # "window_type = 'utility'",
 ];
 
-active-opacity = 0.9
-inactive-opacity = 0.6
+active-opacity = 0.9;
+inactive-opacity = 0.6;
 
 # Need
 backend = "glx";
