--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -56,7 +56,8 @@ font-1 = WeatherIcons:size=12;2
 font-2 = Material Icons:size12;2
 
 modules-left = powermenu separator date separator i3
-modules-right = battery separator temperature separator pulseaudio separator memory separator cpu separator wlan
+modules-right = separator battery separator temperature separator pulseaudio separator memory separator cpu separator wlan
+tray-position = right
 
 [module/separator]
 type = custom/text
@@ -68,6 +69,10 @@ type = custom/text
 content = 
 content-foreground = ${colors.orange}
 click-left = notify-send "poweroff"
+
+[module/tray]
+format = <tray>
+tray-padding = 2
 
 [module/xwindow]
 type = internal/xwindow
