--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -52,12 +52,10 @@ module-margin-left = 1
 module-margin-right = 1
 
 font-0 = hack nerd font:pixelsize=11;2
-font-1 = WeatherIcons:size=12;2
-font-2 = Material Icons:size12;2
+font-1 = Material Icons:size12;2
 
 modules-left = powermenu separator date separator i3
-modules-right = separator battery separator temperature separator pulseaudio separator memory separator cpu separator wlan
-tray-position = right
+modules-right = tray separator battery separator temperature separator pulseaudio separator memory separator cpu separator wlan
 
 [module/separator]
 type = custom/text
@@ -71,8 +69,10 @@ content-foreground = ${colors.orange}
 click-left = notify-send "poweroff"
 
 [module/tray]
+type = internal/tray
 format = <tray>
 tray-padding = 2
+tray-size = 50%
 
 [module/xwindow]
 type = internal/xwindow
@@ -257,11 +257,11 @@ bar-volume-foreground-4 = #55aa55
 bar-volume-foreground-5 = #f5a70a
 bar-volume-foreground-6 = #ff5555
 bar-volume-gradient = false
-bar-volume-indicator-font = 2
+bar-volume-indicator-font = 1
 bar-volume-fill = ─
-bar-volume-fill-font = 2
+bar-volume-fill-font = 1
 bar-volume-empty = ─
-bar-volume-empty-font = 2
+bar-volume-empty-font = 1
 bar-volume-empty-foreground = ${colors.foreground}
 
 [module/alsa]
@@ -285,11 +285,11 @@ bar-volume-foreground-5 = #f5a70a
 bar-volume-foreground-6 = #ff5555
 bar-volume-gradient = false
 bar-volume-indicator = |
-bar-volume-indicator-font = 2
+bar-volume-indicator-font = 1
 bar-volume-fill = ─
-bar-volume-fill-font = 2
+bar-volume-fill-font = 1
 bar-volume-empty = ─
-bar-volume-empty-font = 2
+bar-volume-empty-font = 1
 bar-volume-empty-foreground = ${colors.foreground}
 
 [module/battery]
